@@ -1,6 +1,6 @@
 #!/bin/bash
 
-## Copyright (C) 2010-2011 by Cristian Henzel <oss@rspwn.com>
+## Copyright (C) 2010-2012 by Cristian Henzel <oss@rspwn.com>
 ##
 ## This file is part of ClipIt.
 ##
